--- a/edu.dhbw.andobjviewer.ModelChooser/.project
+++ b/edu.dhbw.andobjviewer.ModelChooser/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AndARModelViewer</name>
+	<name>Edu-Construct 3D</name>
 	<comment></comment>
 	<projects>
 	</projects>
