--- a/edu.dhbw.andobjviewer.ModelChooser/AndroidManifest.xml
+++ b/edu.dhbw.andobjviewer.ModelChooser/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="edu.dhbw.andarmodelviewer" android:versionName="0.3" android:versionCode="3">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="edu.construct3d" android:versionName="0.3" android:versionCode="3">
 
     <uses-sdk android:targetSdkVersion="4" android:minSdkVersion="3"/>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -15,17 +15,16 @@
 
     
 
-<activity android:label="@string/app_name" android:screenOrientation="landscape" android:icon="@drawable/icon" android:name="edu.dhbw.andobjviewer.ModelViewer">
+<activity android:label="@string/app_name" android:screenOrientation="landscape" android:icon="@drawable/icon" android:name="edu.construct3d.ModelViewer">
     <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
     
 </activity>
-<activity android:exported="false"  android:icon="@drawable/icon" android:name="edu.dhbw.andobjviewer.InstructionsActivity">
+<activity android:exported="false"  android:icon="@drawable/icon" android:name="edu.construct3d.InstructionsActivity">
+
 </activity>
-
-
 
 </application>
 
